# R2Archive

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  rate_limit.py  requirements.txt
backend/routers/: auth_oauth.py  comments.py  feedback.py  parse_screenshot.py  perceived.py  records.py  songs.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: FeedbackModal.jsx  FilterBar.jsx  FilterSheet.jsx  LoginModal.jsx  MobileHeader.jsx  MyPageModal.jsx  OnboardingModal.jsx  ScreenshotRegisterModal.jsx  Sidebar.jsx  SongModal.jsx  SongsTable.jsx  TopBar.jsx
frontend/src/hooks/: useMobile.js
frontend/src/store/: useStore.js
frontend/src/utils/: helpers.js
