[tool.poetry]
name = "r2music-archive-api"
version = "0.1.0"
description = "R2Music Archive — FastAPI backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.111,<1.0"
uvicorn = {version = ">=0.30,<1.0", extras = ["standard"]}
psycopg2-binary = "^2.9"
pydantic = ">=2.7,<2.11"
python-dotenv = "^1.2.2"
slowapi = ">=0.1.9,<1.0"
httpx = ">=0.27,<1.0"
PyJWT = ">=2.8.0"
python-multipart = ">=0.0.9"
Pillow = ">=10.3.0"
pytesseract = ">=0.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
